Import Gervill CVS fixes.
2008-08-08  Mark Wielaard  <mark@klomp.org>

       * overlays/openjdk/jdk/src/share/classes/com/sun/media/sound:
       Import Gervill fixes from CVS. See CHANGES.txt.
       * overlays/openjdk/jdk/test/com/sun/media/sound: Likewise.

- Cleanup: Make inner classes static
           AudioFloatFormatConverter.AudioFloatFormatConverterInputStream
           AudioFloatFormatConverter.AudioFloatInputStreamChannelMixer
           AudioFloatFormatConverter.AudioFloatInputStreamResampler
           SimpleInstrument.SimpleInstrumentPart
           SoftChorus.VariableDelay
           SoftChorus.LFODelay
           SoftMixingDataLine.AudioFloatInputStreamResampler
           SoftMixingSourceDataLine.NonBlockingFloatInputStream
           SoftReverb.AllPass
           SoftReverb.Comb
           SoftReverb.Delay
- Cleanup: Remove unused fields in:
           SoftSincResampler.din, SoftLanczosResampler.din,
           SoftMainMixer.finetuning,  SoftMainMixer.coarsetuning
           SoftJitterCorrector.JitterStream.nullbuff,
           SoftAbstractResampler.ModelAbstractResampler.loopread
           SoftAbstractResampler.ModelAbstractResampler.streammarked
- Cleanup: Remove dead code from FFT.
- Cleanup: Make constant fields in SoftFilter final.
- Cleanup: Let SoftSynthesizer.info be final.
- Cleanup: Let SoftProvider.info be final.
- Fix: Unnecessary call to sourceDataLine.drain() in SoftSynthesizer
       causes random hangs in SoftSynthesizer.open jtreg test.
       This happens when the synthesizer is opened and right after closed.
       This will not happen if there is a delay between open and close call.
- Fix: ModelByteBufferAudioFileSoundbankReader,
       SoftAudioPusher, SoftJitterCorrector
       don't ignore stream.read return value.
- Fix: NullPointerException in
       SoftSynthesizer.unloadInstrument if instrument = null
- Fix: SoftJitterCorrector.getSoundbank(URL) may fail to close stream.
- Fix: Futile attempts to guard buffers variable